Updated .gitignore to not hold private maps API Key

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-
-.ipynb_checkpoints/FinalProject-checkpoint.ipynb
 .ipynb_checkpoints/Final Project-checkpoint.ipynb
+
+# File with Google Maps API Key
+API.json
